--- a/app/views/manage/questionnaire-enf/v1/task-list__site-access.html
+++ b/app/views/manage/questionnaire-enf/v1/task-list__site-access.html
@@ -117,7 +117,7 @@
       } if data['addedneighbours'] == 'yes',
       {
         key: {
-          html: 'Potential safety risks'
+          html: 'Health and safety issues'
         },
         value: {
           html: 'Yes<br>'+data['health-and-safety__details'] if data['health-and-safety'] == 'Yes' else 'No'
